~~~~~~~~
- Fixed common stack trace element calculation in lang.ChainedException
  if chained exception is a chained exception itself.
  (friebe)
- Fixed peer.ftp.FtpConnection to be able to cope with FTP servers
  sending an empty directory listing (without "." and "..") for 
  nonexistant directories
  (friebe)
- Fixed format string BIT_AND operator to only use one placeholder
  (ohinckel)


Version 5.7.8, released 2010-03-24
----------------------------------
SVN version: 14410

Heads up!
~~~~~~~~~
- Changed xpcli runner to display exceptions raised in run() block of  
  the run command class including stacktrace
  (friebe)
- Deprecated lang.Primitive::$INTEGER in favor of lang.Primitive::$INT
  (friebe)
- Deprecated lang.Type::$ANY in favor of lang.Type::$VAR
  (friebe)
- Changed util.collections.Map interface to ensure array access works.
  Any implementation must now adhere to http://de3.php.net/arrayaccess
  (friebe)

RFCs
~~~~
- Implemented RFC #0178 - XP installations (runner part)
  (friebe)
- Implemented RFC #0183 - lang.ResourceProvider
  (kiesel)

Bugfixes
~~~~~~~~
- Fixed rdbms.StatementFormatter handling of booleans in %d token
  (friebe)
- Fixed org.nagios.NscaClient's handling of CRC32 checksums
  and thus fixes passive nagios checks since security.checksum
  refactoring
  (kiesel)
- Cleaned up various apidoc spelling issues in @param / @return, and
  exchanged "mixed" with "var" throughout the entire repository.
  (friebe)
- Fixed lang.XPClass raising fatals when methods inherited / implemented
  from builtin classes
  (friebe)
- Fixed reflection on lang.Throwable class in certain cases when builtin
  Exception class is queried for non-existant details
  (friebe)
- Fixed Wrapper::load() not executing casters and checkers when array
  values were submitted and first value is empty
  (ohinckel, Sebastian Kusnier)

Features
~~~~~~~~
- Implemented HTTPOnly support in scriptlet.Cookie
  (friebe)